// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot (danger variant) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#FF453A",
      "borderColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 0,
      "elevation": 8,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
      "shadowColor": "#FF453A",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-Bold",
          "fontSize": 15,
          "letterSpacing": 0.1,
        }
      }
    >
      Delete
    </Text>
  </View>
</View>
`;

exports[`Button matches snapshot (disabled state) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#00D632",
      "borderColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 0,
      "elevation": 8,
      "justifyContent": "center",
      "opacity": 0.45,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
      "shadowColor": "#00D632",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "Outfit-Bold",
          "fontSize": 15,
          "letterSpacing": 0.1,
        }
      }
    >
      Disabled
    </Text>
  </View>
</View>
`;

exports[`Button matches snapshot (ghost variant) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#141414",
      "borderColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 0,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-Bold",
          "fontSize": 15,
          "letterSpacing": 0.1,
        }
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`Button matches snapshot (loading state) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#00D632",
      "borderColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 0,
      "elevation": 8,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
      "shadowColor": "#00D632",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 12,
    }
  }
>
  <ActivityIndicator
    color="#000"
    size="small"
  />
</View>
`;

exports[`Button matches snapshot (outline variant) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderColor": "#2C2C2E",
      "borderRadius": 9999,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontFamily": "Outfit-Bold",
          "fontSize": 15,
          "letterSpacing": 0.1,
        }
      }
    >
      Outline
    </Text>
  </View>
</View>
`;

exports[`Button matches snapshot (primary, default) 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "#00D632",
      "borderColor": undefined,
      "borderRadius": 9999,
      "borderWidth": 0,
      "elevation": 8,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 28,
      "paddingVertical": 15,
      "shadowColor": "#00D632",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 12,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 6,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontFamily": "Outfit-Bold",
          "fontSize": 15,
          "letterSpacing": 0.1,
        }
      }
    >
      Save
    </Text>
  </View>
</View>
`;
